# transformer-decoder

./: .gitignore  CLAUDE.md  README.md  count_title.xlsx  main.py  metric.jsonl  pyproject.toml  readout_diagnosis_report.json  tokenizer_eval.json  豊臣秀吉.json
artifacts/: config.json  generation_config.json  tokenizer.json  tokenizer_config.json
artifacts/0.85B/: config.json  tokenizer.json
artifacts/base/: tokenizer.json
data/clean/: base_cleaner.py  finewiki.py  test_length.py  ultra_fineweb.py  ultra_fineweb_2.py
data/continued/: convert.py  extract.py  merge.py  merge_parapraph.py  paths.py  prompts.py  structure.py  test.py  translate.py  utils.py
data/continued/book/: merge.py  prompts.py
data/continued/epub/: convert.py  extract.py  llm_extract.py
data/continued/pdf/: extract.py
data/continued/wiki/: db.py
data/hub/: upload.py
data/tokenize/: analyze_domain_corpus.py  analyze_token_efficiency.py  analyze_token_ratio.py  domain_corpus_test.py  pretraining.py  test.py  tokenize.py
docs/: CPT 格式说明.md  基础预训练过程.md  模型结构.md  模型结构说明.md  训练优化.md  项目背景.md  项目计划.md  预训练脚本.md
integrations/transformers/: config.py  main.py  model.py  test_2.py
models/: config.py
models/core/: causal_lm.py
models/core/components/: mlp.py  (+1 more)
models/liger/: decoder.py  loss.py
models/reference/: decoder.py  loss.py
models/torch/: causal_lm.py  loss.py
models/utilities/: mask.py
scripts/: install_dpes.sh  start_train.sh  sync_file.sh
tmp/: dl.txt  上杉謙信.json  伊達政宗.json  别名.json  本能寺の変.json  武田信玄.json  織田信長.json  豊臣秀吉.json
train/: base_model.py  dataset.py  pretraining.py  utils.py
train/test/: 1.py  check_error.py  pretraining.py  test_ddp_lm_head_grad.py  test_eval_data_loss.py  test_lm_head_grad.py  test_lm_weight_grad.py
(+44 files in other folders)
