[project]
name = "transformer-decoder"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "modelscope>=1.35.3",
    "datasets>=4.8.4",
    # MacOS Intel
    "numpy<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers==5.5.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tokenizers==0.22.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    # Windows
    "torch==2.9.1; sys_platform == 'win32'",
    "transformers>=5.5.0; sys_platform == 'win32'",
    "tokenizers>=0.22.2; sys_platform == 'win32'",
    # Linux
    "torch==2.9.1; sys_platform == 'linux'",
    "transformers>=5.5.0; sys_platform == 'linux'",
    "tokenizers>=0.22.2; sys_platform == 'linux'",
    "triton>=3.3.0; sys_platform == 'linux'",
    "liger-kernel>=0.7.0,<0.8.0; sys_platform == 'linux'",
    "opencc-python-reimplemented>=0.1.7",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'win32'",
  "sys_platform == 'linux'",
]
